add reset and newgame

--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 </head>
 <body>
     <h1>light-out</h1>
-    <div id="game-board"></div>
+    
     <p>click on the cells to turn all lights off!</p>
     <p>セルをクリックして全部のライトを消そう!</p>
+    <div id="game-board"></div>
+    <button id="reset-button">reset</button> 
+    <button id="new-board-button">new-game</button>
+    
     <script src="light-out.js"></script> 
 </body>
 </html>
